@@ -62,7 +62,7 @@ public abstract class MapBasedEditorViewModel<T> extends OptionEditorViewModel<T
         try {
             return (T) string;
         } catch (ClassCastException ex) {
-            LOGGER.error(String.format("Could not cast string to type %1$s. Try overriding the method in a subclass and provide a conversion from string to the concrete type %1$s", string.getClass()), ex);
+            LOGGER.error("Could not cast string to type %1$s. Try overriding the method in a subclass and provide a conversion from string to the concrete type %1$s".formatted(string.getClass()), ex);
         }
         return null;
     }
